--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + TS + Three.js</title>
-    <link rel="stylesheet" href="src/style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <script type="module" src="src/main.ts"></script>
+    <script type="module" src="./main.ts"></script>
   </body>
 </html>
