--- a/geometry/index.html
+++ b/geometry/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS + Three.js</title>
+    <title>Three.js - Geometry</title>
     
-    <script type="module" crossorigin src="/threejs-vite-project/assets/main.1b76ffc2.js"></script>
+    <script type="module" crossorigin src="/threejs-vite-project/assets/geometry.518d8ecc.js"></script>
     <link rel="modulepreload" crossorigin href="/threejs-vite-project/assets/main.e52205da.js">
-    <link rel="stylesheet" href="/threejs-vite-project/assets/index.8368951d.css">
+    <link rel="stylesheet" href="/threejs-vite-project/assets/index.9e40c309.css">
   </head>
   <body>
     
