--- a/ui_debug/index.html
+++ b/ui_debug/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Three.js - Geometry</title>
+    <title>Three.js - UI Debug</title>
     
-    <script type="module" crossorigin src="/threejs-vite-project/assets/geometry.fd966994.js"></script>
+    <script type="module" crossorigin src="/threejs-vite-project/assets/ui_debug.67b08b44.js"></script>
     <link rel="modulepreload" crossorigin href="/threejs-vite-project/assets/main.73fd0fff.js">
     <link rel="modulepreload" crossorigin href="/threejs-vite-project/assets/ambient_light.b9c1a771.js">
     <link rel="stylesheet" href="/threejs-vite-project/assets/index.9e40c309.css">
