--- a/src/tutorial/geometry/index.html
+++ b/src/tutorial/geometry/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <script type="module" src="./geometry.ts"></script>
+    <script type="module" src="./main.ts"></script>
   </body>
 </html>
