--- a/tutorial/light/index.html
+++ b/tutorial/light/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Three.js - UI Debug</title>
     
-    <script type="module" crossorigin src="/threejs-vite-project/assets/light.22379c07.js"></script>
-    <link rel="modulepreload" crossorigin href="/threejs-vite-project/assets/main.bcbc906b.js">
-    <link rel="modulepreload" crossorigin href="/threejs-vite-project/assets/ambient_light.efc30487.js">
-    <link rel="modulepreload" crossorigin href="/threejs-vite-project/assets/box.5d22bf9d.js">
-    <link rel="modulepreload" crossorigin href="/threejs-vite-project/assets/sphere.e3d73e32.js">
+    <script type="module" crossorigin src="/threejs-vite-project/assets/light.61bde053.js"></script>
+    <link rel="modulepreload" crossorigin href="/threejs-vite-project/assets/main.86866a7f.js">
+    <link rel="modulepreload" crossorigin href="/threejs-vite-project/assets/ambient_light.5ccaa9fa.js">
+    <link rel="modulepreload" crossorigin href="/threejs-vite-project/assets/lil-gui.esm.5af19f2f.js">
+    <link rel="modulepreload" crossorigin href="/threejs-vite-project/assets/sphere.89e94267.js">
     <link rel="stylesheet" href="/threejs-vite-project/assets/index.9e40c309.css">
   </head>
   <body>
