--- a/tutorial/ui_debug/index.html
+++ b/tutorial/ui_debug/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Three.js - UI Debug</title>
     
-    <script type="module" crossorigin src="/threejs-vite-project/assets/ui_debug.6a4fb95c.js"></script>
-    <link rel="modulepreload" crossorigin href="/threejs-vite-project/assets/main.bcbc906b.js">
-    <link rel="modulepreload" crossorigin href="/threejs-vite-project/assets/ambient_light.efc30487.js">
-    <link rel="modulepreload" crossorigin href="/threejs-vite-project/assets/box.5d22bf9d.js">
+    <script type="module" crossorigin src="/threejs-vite-project/assets/ui_debug.49c6adc4.js"></script>
+    <link rel="modulepreload" crossorigin href="/threejs-vite-project/assets/main.86866a7f.js">
+    <link rel="modulepreload" crossorigin href="/threejs-vite-project/assets/ambient_light.5ccaa9fa.js">
+    <link rel="modulepreload" crossorigin href="/threejs-vite-project/assets/lil-gui.esm.5af19f2f.js">
     <link rel="stylesheet" href="/threejs-vite-project/assets/index.9e40c309.css">
   </head>
   <body>
