--- a/src/tutorial/light/index.html
+++ b/src/tutorial/light/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Three.js - UI Debug</title>
+    <title>Three.js - Light</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
