--- a/tutorial/particles/index.html
+++ b/tutorial/particles/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Three.js - Geometry</title>
+    <title>Three.js - Particles</title>
     
-    <script type="module" crossorigin src="/threejs-vite-project/assets/geometry.8c381eb8.js"></script>
+    <script type="module" crossorigin src="/threejs-vite-project/assets/particles.f6a0d99b.js"></script>
     <link rel="modulepreload" crossorigin href="/threejs-vite-project/assets/main.9de40d99.js">
     <link rel="modulepreload" crossorigin href="/threejs-vite-project/assets/tutorial.e5ea05ca.js">
-    <link rel="modulepreload" crossorigin href="/threejs-vite-project/assets/ambient_light.760c9c11.js">
     <link rel="stylesheet" href="/threejs-vite-project/assets/index.9e40c309.css">
   </head>
   <body>
