--- a/tutorial/light/index.html
+++ b/tutorial/light/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Three.js - UI Debug</title>
+    <title>Three.js - Light</title>
     
-    <script type="module" crossorigin src="/threejs-vite-project/assets/light.388a72bd.js"></script>
-    <link rel="modulepreload" crossorigin href="/threejs-vite-project/assets/main.3a414f1c.js">
-    <link rel="modulepreload" crossorigin href="/threejs-vite-project/assets/ambient_light.21799e97.js">
-    <link rel="modulepreload" crossorigin href="/threejs-vite-project/assets/lil-gui.esm.60f9455d.js">
-    <link rel="modulepreload" crossorigin href="/threejs-vite-project/assets/sphere.e6af42fb.js">
+    <script type="module" crossorigin src="/threejs-vite-project/assets/light.86b3e8de.js"></script>
+    <link rel="modulepreload" crossorigin href="/threejs-vite-project/assets/main.9de40d99.js">
+    <link rel="modulepreload" crossorigin href="/threejs-vite-project/assets/tutorial.e5ea05ca.js">
+    <link rel="modulepreload" crossorigin href="/threejs-vite-project/assets/ambient_light.760c9c11.js">
+    <link rel="modulepreload" crossorigin href="/threejs-vite-project/assets/lil-gui.esm.0966a605.js">
+    <link rel="modulepreload" crossorigin href="/threejs-vite-project/assets/sphere.29efaf56.js">
     <link rel="stylesheet" href="/threejs-vite-project/assets/index.9e40c309.css">
   </head>
   <body>
